[gd_scene load_steps=3 format=3 uid="uid://cx45mucyy5s8k"]

[ext_resource type="Script" path="res://Control.gd" id="1_vqom6"]
[ext_resource type="Texture2D" uid="uid://do0hi07mnyq7i" path="res://Frage Fenster.png" id="2_c68du"]

[node name="Spiel" type="Node2D"]
position = Vector2(357, 333)
script = ExtResource("1_vqom6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1280.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -12.0
offset_top = -189.0
offset_right = 1176.0
offset_bottom = 602.0
auto_translate = false
localize_numeral_system = false
texture = ExtResource("2_c68du")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -340.0
offset_right = 260.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false

[node name="QuestionLabel1" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Question will appear here."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 139
language = "de"

[node name="AnswerInput" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
placeholder_text = "write here"

[node name="SubmitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
text = "Submit Answer"

[node name="Quit Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 963.0
offset_top = -31.0
offset_right = 995.0
auto_translate = false
localize_numeral_system = false
text = "x"

[connection signal="button_down" from="Control/Quit Button" to="." method="_on_quit_button_button_down"]
